# fastfermion

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.dev.txt  setup.py
examples/: common.py  hamiltonians.py  jordan_wigner.py  majorana_propagation_fermihubbard.py  pauli_propagation.py  sparse.py
examples/data/: CrO-38.txt  su4circuit-16.txt
fastfermion/: __init__.py  _cirq.py  _of.py  _parse.py
src/: bits.h  bits_utils.h  common.h  debug.h  error.h  fermi_algebra.h  fermi_sparse.h  fockstate.h  format_poly.h  gen.h  majorana_algebra.h  majorana_gates.h  majorana_propagation.h  majorana_sparse.h  matrix.h  parse.h  pauli_algebra.h  pauli_gates.h  pauli_propagation.h  pauli_sparse.h  python_bind.cpp  qubitproductstate.h  subspaces.h  transforms.h
test/: algebra_test.py  common.py  majorana_circuit_test.py  parse_test.py  pauli_circuit_test.py  sparse_test.py  state_test.py  transforms_test.py
